--- a/index.html
+++ b/index.html
@@ -7,6 +7,54 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div id="container">
+
+       <header id="header">
+        <section id="home" class="hd__section">
+        <h3>Home</h3>
+       </section>
+       <section id="about" class="hd__section">
+        <h3>About</h3>
+       </section>
+       <section id="projects" class="hd__section">
+        <h3>Projects</h3>
+       </section>
+       <section id="contact" class="hd__section">
+        <h3>Contact</h3>
+       </section>
+       </header>
+
+       <main id="main">
+       <section id="home-section">
+        <p>HOME </p>
+        <h1>welcome to my portfolio website</h1>
+        </section>
+        <section id="about-me">
+             <p1>ABOUT</p1>
+            <h1>Hello, I'm Aya 👋</h1>
+            <p>
+                I'm a web developer with a strong interest in front-end development, <br>
+                and creating responsive, engaging websites.  <br>
+                Explore my work and feel free to connect with me!
+            </p>
+        </section>
+       </main>
+
+       <footer id="footer">
+        <section id="creater-section">
+            <p>&copy; Made by Aya ❤ </p>
+        </section>
+        <section id="linkedin">
+            <a href="https://www.linkedin.com/in/aya-mohammad-005bb3336/" target="_blank">
+            <img src="images/linkedin.png" alt="LinkedIn">
+        </a> 
+    </section>
+    <section id="github">
+        <a href="https://github.com/ayamohamed-amg" target="_blank">
+            <img src="images/github.png" alt="GitHub">
+        </a>
+    </section>
+       </footer>
+    </div>
 </body>
 </html>
