finish home & about

--- a/index.html
+++ b/index.html
@@ -30,14 +30,22 @@
         <h1>welcome to my portfolio website</h1>
         </section>
         <section id="about-me">
-             <p1>ABOUT</p1>
+    <h2 class="about-title">ABOUT</h2>
+    <div class="about-content">
+        <div class="about-text">
             <h1>Hello, I'm Aya 👋</h1>
             <p>
                 I'm a web developer with a strong interest in front-end development, <br>
-                and creating responsive, engaging websites.  <br>
+                and creating responsive, engaging websites. <br>
                 Explore my work and feel free to connect with me!
             </p>
-        </section>
+        </div>
+        <div class="about-img">
+            <img src="images/aya.png" alt="Aya">
+        </div>
+    </div>
+</section>
+
        </main>
 
        <footer id="footer">
