--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </section>
             <section id="projects-section">
-                <h2 class="about-title">PROJECTS</h2>
+                <h2 class="projects-title">PROJECTS</h2>
                 <div class="projects-content">
                     <div class="project">
                         <h3>Recipe App</h3>
@@ -100,7 +100,17 @@
                             I'd love to hear from you!
                         </p>
                     </div>
+                 <!--   <div class="contact-buttons">
+                        <button>My phone</button>
+                        <button>My email</button>
+                        <button>My linkedin</button>
+                        <button>My github</button>
+                    </div> -->
                 </div>
+                
+
+
+
             </section>
 
 
