finish contact section & responsive

--- a/index.html
+++ b/index.html
@@ -12,24 +12,23 @@
     <div id="container">
         <!-- header -->
         <header id="header">
-            <section id="home" class="hd__section">
-                <h3>Home</h3>
-            </section>
-            <section id="about" class="hd__section">
-                <h3>About</h3>
-            </section>
-            <section id="projects" class="hd__section">
-                <h3>Projects</h3>
-            </section>
-            <section id="contact" class="hd__section">
-                <h3>Contact</h3>
-            </section>
+            <nav>
+                <ul>
+                    <li><a href="#home-section">Home</a></li>
+                    <li><a href="#about-me">About</a></li>
+                    <li><a href="#projects-section">Projects</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
+                </ul>
+            </nav>
+
         </header>
 
         <main id="main">
             <section id="home-section">
                 <p>HOME </p>
-                <h1>welcome to my portfolio website</h1>
+                <h1>Welcome to my portfolio website
+                    <br>💆‍♀️Aya Portofolio💆‍♀️
+                </h1>
             </section>
             <section id="about-me">
                 <h2 class="about-title">ABOUT</h2>
@@ -37,10 +36,15 @@
                     <div class="about-text">
                         <h1>Hello, I'm Aya 👋</h1>
                         <p>
-                            I'm a student at ITI with a strong interest in front-end development, <br>
-                            and creating responsive, engaging websites. <br>
-                            Explore my work and feel free to connect with me!
+                            I'm a Computer Science student passionate about front-end development and mobile
+                            applications. <br>
+                            I have built projects using Kotlin and Flutter, including a Recipe App and a Library App,
+                            <br>
+                            and I also created this responsive Portfolio Website. <br>
+                            Currently, I’m learning HTML to expand my web development skills and continue growing as a
+                            developer.
                         </p>
+
                     </div>
                     <div class="about-img">
                         <img src="images/aya.png" alt="Aya">
@@ -64,7 +68,7 @@
                         </a>
                     </div>
                     <div class="project">
-                        <h3>portofolio website</h3>
+                        <h3>Portofolio Website</h3>
                         <video src="images/portofolio.mp4" muted
                             onclick="this.requestFullscreen(); this.play();"></video>
                         <p>
@@ -100,14 +104,23 @@
                             I'd love to hear from you!
                         </p>
                     </div>
-                 <!--   <div class="contact-buttons">
-                        <button>My phone</button>
-                        <button>My email</button>
-                        <button>My linkedin</button>
-                        <button>My github</button>
-                    </div> -->
+                    <div class="contact-buttons">
+                        <a href="tel:+201117628989">
+                            <button>📞My Phone</button>
+                        </a>
+                        <a href="mailto:ayamohamed112003@gmail.com">
+                            <button>✉ My Email</button>
+                        </a>
+                        <a href="https://www.linkedin.com/in/aya-mohammad-005bb3336/" target="_blank">
+                            <button>💼 My LinkedIn</button>
+                        </a>
+                        <a href="https://github.com/ayamohamed-amg" target="_blank">
+                            <button>🐱 My GitHub</button>
+                        </a>
+                    </div>
+
                 </div>
-                
+
 
 
 
