--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     </div>
                     <div class="about-img">
-                        <img src="images/Aya.png" alt="Aya">
+                        <img src="images/aya.png" alt="Aya">
                     </div>
                 </div>
             </section>
